<resources>
    <string name="app_name">CoCoNet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts_fragment">Contacts Fragment</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="groups_fragment">Groups Fragment</string>
    <string name="space">\u0020</string>
    <string name="hello">Hello.</string>
    <string name="login_image">Login image</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotten_password">Forget password?</string>
    <string name="click">Click!</string>
    <string name="log_in">Log in</string>
    <string name="or">or</string>
    <string name="log_in_with_phone_number">Log in with phone number</string>
    <string name="account_no_exist">Don\'t have an account yet?</string>
    <string name="sign_up">Create account</string>
    <string name="signup_image">Signup image</string>
    <string name="start">Let\'s get started!</string>
    <string name="account_is_exist">Already have an account?</string>
    <string name="search_user">Search user</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
    <string name="create_group">New group</string>
    <string name="title">Title</string>
    <string name="phone_number">Phone number</string>
    <string name="verification_code">Verification code</string>
    <string name="send_code">Send code</string>
    <string name="verify">Verify</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>