<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                android:layout_marginVertical="48dp"
                android:contentDescription="@string/login_image"
                app:srcCompat="@drawable/log_in_picture" />

            <TextView
                android:id="@+id/hello_log_in_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_image"
                android:textColor="?attr/colorOnSecondary"
                android:textStyle="bold"
                android:textSize="32sp"
                android:text="@string/hello" />

            <TextView
                android:id="@+id/welcome_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hello_log_in_textView"
                android:textColor="?attr/colorOnSecondary"
                android:textStyle="bold"
                android:textSize="32sp"
                android:text="@string/welcome_back" />

            <LinearLayout
                android:id="@+id/login_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome_textView"
                android:layout_marginTop="24dp"
                android:background="@drawable/field_design"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/user_login_email_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="4dp"
                    android:drawableStart="@drawable/email"
                    android:background="@drawable/field_empty_design"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/silver_dark"
                    android:layout_marginHorizontal="16dp" />

                <EditText
                    android:id="@+id/user_login_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="4dp"
                    android:drawableStart="@drawable/password"
                    android:background="@drawable/field_empty_design" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/forgotten_password_linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_box"
                android:layout_marginTop="8dp"
                android:layout_alignParentEnd="true">

                <TextView
                    android:id="@+id/create_new_password_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotten_password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/space" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAccent"/>

            </LinearLayout>


            <Button
                android:id="@+id/log_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgotten_password_linearLayout"
                android:padding="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/log_in"
                android:textSize="18sp"
                android:background="@drawable/button_design"
                android:textColor="@color/white"
                app:backgroundTint="@color/black"/>

            <TextView
                android:id="@+id/or_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/log_in_button"
                android:layout_marginTop="8dp"
                android:text="@string/or"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/phone_log_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/or_text_view"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/log_in_with_phone_number"
                android:textSize="18sp"
                android:background="@drawable/button_design"
                android:textColor="@color/white"
                app:backgroundTint="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_log_in_button"
                android:layout_marginVertical="24dp"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/no_have_account_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_no_exist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/space"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/sign_up_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAccent" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>